Updated Job Handler

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,13 +17,19 @@
 <!-- opening of page content container -->
 <div class="row page-content-container">
 
-  <!-- opening of sildebar container-->
-  <div class="col-md-3 sildebar-container">
+  <!-- opening of sidebar container-->
+  <div class="col-md-3 sidebar-container">
     <ul class="list sidebar-list">
-      <li class="link"> <a routerLink="/home" routerLinkClass="active" >Dashboard</a></li>
-      <li class="link"><a routerLink="allAgents" routerLinkClass="active">All Agents</a></li>
-      <li class="link"><a routerLink="payAgents" routerLinkClass="active">Pay Agents</a></li>
-      <li class="link"><a routerLink="applicant" routerLinkClass="active">Applicant Lists</a></li>
+      <li class="">Dashboard</li>
+      <li class="link dropdown" (click)="showDropdown()">All Applicants
+        <ul [hidden]="dropdownStatus">
+          <li class="link"><a routerLink="applicant/all" routerLinkClass="active">All Applicants</a></li>
+          <li class="link"><a routerLink="applicant/final" routerLinkClass="active">Final Applicants</a></li>
+          <li class="link"><a routerLink="applicant/pending" routerLinkClass="active">Pending Applicants</a></li>
+        </ul>
+      </li>
+      <li class="link"><a routerLink="pedos" routerLinkClass="active">Schedule PEDOS</a></li>
+      <li class="link"><a routerLink="./OWWA" routerLinkClass="active">Schedule OWWA</a></li>
     </ul>
 
   </div>
