--- a/src/styles.css
+++ b/src/styles.css
@@ -68,12 +68,12 @@ ul{margin: 0px;padding: 0px;}
     text-decoration: none;
     background-color:var(--dark-blue);
 }
-.sildebar-container{
+.sidebar-container{
     background-color: var(--blue);
     box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
     padding: 0px;
 }
-.content-container,.sildebar-container{
+.content-container,.sidebar-container{
     padding-top: 60px;
 }
 .sidebar-list{
@@ -96,6 +96,13 @@ ul{margin: 0px;padding: 0px;}
     height: 100%;
     color: #fff;
 }
+.sidebar-list li ul li{
+    list-style: none;
+}
+.sidebar-list li ul li a{
+   text-decoration: none;
+}
+
 .sidebar-list > li > a:hover,.sidebar-list > li > a:focus,.sidebar-list > li > a:active{
     color: #fff;
     text-decoration: none;
