Job Handler Dashboard Updated

--- a/src/app/final-applicant/final-applicant.component.html
+++ b/src/app/final-applicant/final-applicant.component.html
@@ -26,7 +26,7 @@
         <td>Sanyam Negi</td>
         <td>sanyam@gmail.com</td>
         <td>Final</td>
-        <td><a routerLink="update" routerLinkClass="active" class="btn btn-fps">View</a></td>
+        <td><a routerLink="../applicant/detail" routerLinkClass="active" class="btn btn-fps">View</a></td>
       </tr>
       <tr>
           <td>2</td>
