--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,7 +10,7 @@
     <input type="password" name="password" class="form-control" id="password" placeholder="password"/>
   </div>
   <div class="col-md-12 form-group">
-    <a class="btn btn-info" name="forget-password" routerLink="home" routerLinkClass="active" >Log In</a>
+    <a class="btn btn-info" name="log-in" routerLink="home" routerLinkClass="active" >Log In</a>
   </div>
   <div class="col-md-12 form-group">
     <a class="btn btn-info" name="forget-password" routerLink="forgetPassword" routerLinkClass="active" >Forget Password</a>
