--- a/src/app/pending-applicant/pending-applicant.component.html
+++ b/src/app/pending-applicant/pending-applicant.component.html
@@ -26,7 +26,7 @@
         <td>Pranay Goyal</td>
         <td>pranay@gmail.com</td>
         <td>Pending</td>
-        <td><a routerLink="update" routerLinkClass="active" class="btn btn-fps">View</a></td>
+        <td><a routerLink="../applicant/detail" routerLinkClass="active" class="btn btn-fps">View</a></td>
       </tr>
       <tr>
           <td>2</td>
