--- a/src/app/pedos-list/pedos-list.component.html
+++ b/src/app/pedos-list/pedos-list.component.html
@@ -26,7 +26,7 @@
         <td>Ashpi Goyal</td>
         <td>ashpi@gmail.com</td>
         <td>Pending</td>
-        <td><a routerLink="update" routerLinkClass="active" class="btn btn-fps">View</a></td>
+        <td><a routerLink="schedule-Pedos" routerLinkClass="active" class="btn btn-fps">View</a></td>
       </tr>
       <tr>
           <td>2</td>
@@ -35,7 +35,7 @@
           <td>Harish Rajpal</td>
           <td>harish@gmail.com</td>
           <td>Pending</td>
-          <td><a routerLink="update" routerLinkClass="active" class="btn btn-fps">View</a></td>
+          <td><a routerLink="schedule-Pedos" routerLinkClass="active" class="btn btn-fps">View</a></td>
         </tr>
     </table>
     </div>  
